Adding finished second task - check text in tooltips in the highsoft employees chart

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -12,6 +12,7 @@
 .idea/
 !.idea/icon*.png
 *.iml
+/target/**
 
 # Common credential files
 **/credentials.json
@@ -114,7 +115,7 @@ docs/_build/
 
 # PyBuilder
 .pybuilder/
-target/
+/target/**
 
 # Jupyter Notebook
 .ipynb_checkpoints
